deployment/nerperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netperf
spec:
  selector:
    matchLabels:
      app: netperf
  replicas: 2
  template:
    metadata:
      labels:
        app: netperf
    spec:
      containers:
      - name: netperf
        image: weny017/nerperf:latest
        imagePullPolicy: IfNotPresent
