deployment/wrk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrk
spec:
  selector:
    matchLabels:
      app: wrk
  template:
    metadata:
      labels:
        app: wrk
    spec:
      containers:
      - name: wrk
        image: weny017/wrk:latest
